# ClipBarcode

./: .gitignore  LICENSE.md  README  README.md  app.pyw  app.spec  app_macos.spec  boleto.py  database.py  datetime_tools.py  digito_verificador.py  main.py  main.pyw  main.spec  pipdeptree.txt  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: icon.icns
clipbarcode/: boleto.py  config.py  constants.py  database.py  datetime_tools.py  digito_verificador.py  exceptions.py  models.py  toplevels.py  update.py  utils.py  version.py
compiler/: clipbarcode_v1.1_win64.iss  clipbarcode_v1.2_win64.iss  clipbarcode_v1.3.0_win64.iss  clipbarcode_v1.4.0_win64.iss  clipbarcode_v1.5.0_win64.iss  clipbarcode_v1.6.0_win64.iss  clipbarcode_v1.7.0_win64.iss  clipbarcode_v2.0.0_win64.iss  clipbarcode_win64.iss
docs/: app.html  boleto.html  database.html  datetime_tools.html  digito_verificador.html
docs/clipbarcode/: boleto.html  config.html  constants.html  database.html  datetime_tools.html  digito_verificador.html  exceptions.html  index.html  models.html  toplevels.html  update.html  utils.html  version.html
scripts/: build.sh  create_dmg.sh
tests/: conftest.py  test_boleto.py  test_database.py  test_datetime_tools.py  test_digito_verificador.py
