[tool.poetry]
name = "clipbarcode"
version = "v2.0.2"
description = "Aplicação Windows que facilita a leitura de códigos de barras e obtenção da linha digitável."
authors = ["Vinícius Costa <viniciusccosta95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
pytesseract = "^0.3.10"
peewee = "^3.16.2"
pyzbar = "^0.1.9"
pyparsing = "^3.0.9"
pyperclip = "^1.8.2"
requests = "^2.31.0"
ttkbootstrap = "^1.10.1"
markdown = "^3.4.3"
tkhtmlview = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
