[tool.poetry]
name = "clipbarcode"
version = "v2.0.2"
description = "Aplicação Windows que facilita a leitura de códigos de barras e obtenção da linha digitável."
authors = ["Vinícius Costa <viniciusccosta95@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.0"
python-dateutil = "^2.8.2"
pytesseract = "^0.3.10"
peewee = "^3.16.2"
pyzbar = "^0.1.9"
pyparsing = "^3.2.3"
pyperclip = "^1.9.0"
requests = "^2.32.3"
ttkbootstrap = "^1.12.0"
markdown = "^3.7"
tkhtmlview = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.10.0"
pyinstaller = "^6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
