[tool.poetry]
name = "clipbarcode"
version = "v2.0.2"
description = "Aplicação Windows que facilita a leitura de códigos de barras e obtenção da linha digitável."
authors = ["Vinícius Costa <viniciusccosta95@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
peewee = "^3.17.9"
python-dotenv = "^1.1.0"
python-dateutil = "^2.9.0.post0"
pytesseract = "^0.3.13"
pyzbar = "^0.1.9"
pyperclip = "^1.9.0"
ttkbootstrap = "^1.12.0"
tkhtmlview = "^0.3.1"
markdown = "^3.7"
requests = "^2.32.3"
pyparsing = "^3.2.3"
toml = "^0.10.2"
rich = "^14.0.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.6"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
